# cutscribe-studio

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  PRESET_SYSTEM.md  ROADMAP.md
presets/: classic-bold.json  magenta-pop.json  teal-focus.json
src/cutscribe/: __init__.py  __main__.py  app.py  models.py
src/cutscribe/core/: __init__.py  autocut.py  ffmpeg.py  presets.py  profile_scorer.py  render.py  transcribe.py
src/cutscribe/ui/: main_window.py  preset_editor.py
tests/: test_presets.py  test_profile_scorer.py  test_render.py
