[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cutscribe-studio"
version = "0.1.0"
description = "Local-first desktop video clipping and captioning tool."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Christopher Castillo" }
]
dependencies = [
  "PySide6>=6.7",
  "faster-whisper>=1.0",
  "pydantic>=2.7",
  "opencv-python>=4.9",
  "numpy>=1.26",
  "rich>=13.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[project.scripts]
cutscribe = "cutscribe.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
